2015-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* po/es.po: small corrections in Spanish translation.

2015-01-25  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.1e (evolution of 6.2.1).
	* doc/version.texi: version 6.2.1e.
	* src/main.cc: mark translatable strings.
	* src/frontend/engine.cc: mark translatable strings.
	* po/gnuchess.pot: updated for the new translatable strings.
	* po/POTFILES.in: include main.cc and engine.cc.
	* po/POTFILES: include main.cc and engine.cc.
	* po/es.po: translation of the new strings.

2015-01-04  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: changes in version 6.2.1.
	* configure.ac: set version 6.2.1.
	* doc/version.texi: set version 6.2.1.
	* doc/Makefile.am: clean files.
	* man/Makefile.am: clean files.

2015-01-04  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: changes in version 6.2.0.
	* configure.ac: set version 6.2.0.
	* doc/version.texi: set version 6.2.0.
	* doc/gnuchess.texi: copyright year 2015.
	* src/main.cc: copyright year 2015.

2015-01-03  H.G. Muller  <h.g.muller@hccnet.nl>  (tiny change)

	* misc: new directory
	* misc/gnuchess.eng: engine file for XBoard.
	* misc/gnuchess.png: logo file for XBoard.
	* configure.ac: path for installation of game data files.
	* Makefile.am: distribution of engine and logo file.

2015-01-02  Michael Vetter  <g.bluehut@googlemail.com>  (tiny change)

	* doc/gnuchess.texi: correct punctuation and wording.
	* src/* (several files): remove trailing spaces.

2014-08-01  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/move.cc: lowercase not allowed for piece names.

2014-08-01  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: simple man page based on help2man.
	* Makefile.am: simple man page based on help2man.
	* man/: simple man page based on help2man.
	* man/Makefile.am: simple man page based on help2man.
	* doc/Makefile.am: small error in header description,

2014-07-29  Antonio Ceballos  <aceballos@gmail.com>
